style.css
:root {
  --color-accent: oklch(66.722% 0.12088 225.203);
}

body {
  /* Set line height to 1.5 times the font size
	   and use the OS’s UI font as the website font
	 */
  font: 100%/1.5 system-ui;
  max-width: 100ch;
  margin-inline: auto;
  padding: 1em; 
}

img {
  max-width: 50%;
  max-height: auto;

}

nav {
  display: flex;
  margin-bottom: 1em;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: oklch(80% 3% 200);
}

nav a {
  flex: 1;
  text-decoration: none;
  color: inherit;
  text-align: center;
  padding: 0.5em;
}

nav a.current {
  border-bottom-width: 0.4em;
  border-bottom-color: oklch(90% 3% 200);
  border-bottom-style: solid;
  padding-bottom: 0.25em;

}

nav a:hover {
  border-bottom-width: 0.4em;
  border-bottom-color: var(--color-accent);
  border-bottom-style: solid;
  padding-bottom: 0.1em;
  background-color: oklch(from var(--color-accent) 95% 5% 225.203);
}

form {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 1em;
}

label {
  display: grid;
  grid-template-columns: subgrid;
  grid-column: 1 / -1;
}

button[type="submit"] {
  grid-column: 1 / -1;
}

.projects {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
}

.projects article {
  display: grid;
  grid-template-rows: subgrid;
  grid-row: span 3;
  gap: 1em;
}

.projects h2 {
  margin: 0;
}

h1 {
  font-size: 400%
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.1;
  text-wrap: balance;
}

